--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,14 @@
 {
-  "name": "Minimal Manifest",
+  "name": "vtabs",
   "version": "1.0.0",
-  "description": "A basic example extension with only required keys",
-  "host_permissions": [
-    "http://*/*",
-    "https://*/*"
-  ],
+  "description": "vtabs provide the vertical tabs for the chrome browser",
+  "host_permissions": ["http://*/*", "https://*/*"],
   "icons": {
     "48": "images/icon-48.png",
     "128": "images/icon-128.png"
   },
   "manifest_version": 3,
-  "permissions": [
-    "sidePanel",
-    "tabs"
-  ],
+  "permissions": ["sidePanel", "tabs"],
   "side_panel": {
     "default_path": "index.html"
   }
