--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@commitlint/prompt-cli": "^18.6.1",
     "@types/chrome": "^0.0.261",
     "@types/react": "^18.2.56",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
