fix(app.tsx) user select none

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,3 @@
 {
-    "*.{js,cjs,mjs,jsx,ts,tsx,vue}": [
-        "prettier --write",
-        "eslint --fix"
-    ]
+  "*.{js,cjs,mjs,jsx,ts,tsx,vue}": ["prettier --write", "eslint --fix"]
 }
